# ti_cc112x

./: CMakeLists.txt  README.md  build.sh
docs/: INDEX.md  NRF52_GPIO_PINS.rst
include/: ti_cc_regs.h
python_tools/: make_registers.py  print_types_c.py
test_register_access/: CMakeLists.txt  test_ti_reg.cc
yaml/: ti_cc1xxx.yaml
